--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,18 @@
+/*
+  PaperTheme 3.0 Main Stylesheet
+*/
 
+@import "variables";
+
+//Font Size Settings
+h1,h2,h3,h4,h5,h6,p
+{
+  color: $text-disabled-colour;
+}
+
+blockquote
+{
+  border-left: 5px solid $primary-colour;
+  font-family: $font-family-stack;
+  color: $text-disabled-colour;
+}
