Add Font Style for Link and Footer

--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -10,3 +10,14 @@ blockquote
   font-family: $font-family-stack;
   color: $text-disabled-colour;
 }
+
+.link-no-decorate
+{
+  text-decoration-style: none;
+}
+
+// Footer Font Style
+.footer-font-colour
+{
+  color: white;
+}
