Add Style for Controlling Header Navbar Background Colour

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,12 @@
 @import "variables";
 @import "font";
 
+// Head Nav
+nav
+{
+  background-color: $primary-colour !important;
+}
+
 // Footer
 body
 {
