Add Style For Change Background Colour of Page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,12 @@
 @import "variables";
 @import "font";
 
+//Main Page Background Colour
+html
+{
+  background-color: white; 
+}
+
 // Head Nav
 nav
 {
