Implement Search Box

--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -22,6 +22,12 @@ blockquote
   color: $text-disabled-colour !important;
 }
 
+//Search Bar
+.search-font-color
+{
+  color: $text-disabled-colour;
+}
+
 // Footer Font Style
 .footer-font-colour
 {
