Add Icon in Side Navbar

--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -30,7 +30,7 @@ blockquote
 //Side Nav Font Style
 .sidebar-button-inner
 {
-  color: $text-disabled-colour !important;
+  color: $menubar-text-colour !important;
 }
 
 //Search Bar
