Add Primary Menu

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -43,7 +43,7 @@ header, main, footer
   width: 90%;
 }
 
-.sidebar-button-inner > span > i
+.side-nav > center > ul > li > a > span > i
 {
   display:block;
   float:none;
