--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -1,11 +1,11 @@
 //Font Size Settings
 h1,h2,h3,h4,h5,h6,p
 {
-  color: $text-heading-colour;
+  color: $text-heading-colour !important;
 }
 p
 {
-  color: $text-disabled-colour;
+  color: $text-disabled-colour !important;
 }
 
 h1 {font-size: 37.32px;}
@@ -22,6 +22,11 @@ blockquote
   font-size: 18px;
 }
 
+.link-no-colour
+{
+  color: $text-heading-colour;
+}
+
 .link-no-decorate
 {
   text-decoration-style: none;
@@ -36,5 +41,5 @@ blockquote
 // Footer Font Style
 .footer-font-colour
 {
-  color: white;
+  color: white !important;
 }
