Fix Container Width of the Index Page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -104,8 +104,8 @@ header, main, footer
 
 .home-container
 {
-  margin-left: 3%;
-  margin-right: 3%;
+  margin: auto;
+  width: 94%;
 }
 
 .index-card-margin-bottom
