Implement Page Page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "social-button";
 @import "index-page";
 @import "single-page";
+@import "page-page";
 
 //Main Page Background Colour
 html
