Recode on the reader common style and refactor into the new file reader.scss

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import "search-box";
 @import "footer";
 @import "social-button";
+@import "reader";
 @import "index-page";
 @import "single-page";
 @import "page-page";
