Add Style for search result text showing in index page

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "font";
 @import "side-nav";
 @import "search-box";
+@import "search-result";
 @import "footer";
 @import "social-button";
 @import "reader";
