Add Warning text when there's no post in the page

--- a/src/scss/search-result.scss
+++ b/src/scss/search-result.scss
@@ -8,3 +8,14 @@
 {
   color: $menubar-text-colour !important;
 }
+
+.not-found-result
+{
+  text-align: center;
+}
+
+.not-found-result-subtext
+{
+  @extend .not-found-result;
+  color: $menubar-text-colour !important;
+}
