Add Page Pagination

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import "search-result";
 @import "footer";
 @import "social-button";
+@import "pagination";
 @import "reader";
 @import "index-page";
 @import "single-page";
