Show category and tag name, description

--- a/src/scss/search-result.scss
+++ b/src/scss/search-result.scss
@@ -9,6 +9,11 @@
   color: $menubar-text-colour !important;
 }
 
+.search-result > .category-description
+{
+  margin-top:-20px;
+}
+
 .not-found-result
 {
   text-align: center;
