Add Comment Custom Style

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 @import "social-button";
 @import "pagination";
 @import "reader";
+@import "comment";
 @import "index-page";
 @import "single-page";
 @import "page-page";
