Change Colour for subheader in single page

--- a/src/scss/single-page.scss
+++ b/src/scss/single-page.scss
@@ -40,6 +40,7 @@
 .single-container > .title > p
 {
   margin-top:10px;
+  color: $menubar-text-colour !important;
 }
 
 // Single Page Content Area Configuration
