Fix side-nav has missing style when installed purify-css

--- a/src/scss/side-nav.scss
+++ b/src/scss/side-nav.scss
@@ -12,6 +12,12 @@
   margin-top:30px;
 }
 
+#menu-primary-menu
+{
+  padding-left: 0;
+  list-style-type: none;
+}
+
 .side-nav
 {
   background-color: $home-background-colour;
