--- a/src/scss/side-nav.scss
+++ b/src/scss/side-nav.scss
@@ -43,6 +43,12 @@ header, main, footer
   width:100%;
 }
 
+.nav-wrapper > .left
+{
+  margin-left: -15px;
+  list-style-type: none;
+}
+
 @media only screen and (max-width : 992px)
 {
   header, main, footer
