Add License for project

--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
 Theme Name: Paper Theme
 Theme URI: https://github.com/arnondora/wordpress-paper-theme/
 Description: Paper Theme for Wordpress
-Version: 3.0
+Version: 3.2.0
 Author: Arnon Puitrakul
 Author URI: http://www.arnondora.in.th/profile
+Text Domain: papertheme3
+License: GNU GPLv3
+License URI: https://www.gnu.org/licenses/gpl-3.0.html
 */
