Fix Open Sans Font

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,7 +21,7 @@
 html
 {
   background-color: white;
-  font-family: 'Open Sans', 'sans-serif' ​!important;
+  font-family: 'Open Sans', sans-serif !important;
   font-weight: 400;
 }
 
