--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,8 +21,7 @@
 html
 {
   background-color: white;
-  font-family: 'Open Sans', sans-serif !important;
-  font-weight: 400;
+  font-family: $font-family-stack;
 }
 
 // Head Nav
