--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,3 +12,6 @@ $google-plus-colour: #dd4b39;
 
 // Font
 $font-family-stack: 'Open Sans';
+
+// Social Button Hover Settings
+$social-btn-hover-darken: 20%;
