Remove heading text colour important option

--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -1,11 +1,11 @@
 //Font Size Settings
 h1,h2,h3,h4,h5,h6,p
 {
-  color: $text-heading-colour !important;
+  color: $text-heading-colour;
 }
 p
 {
-  color: $text-disabled-colour !important;
+  color: $text-disabled-colour;
 }
 
 h1 {font-size: 37.32px;}
