--- a/src/scss/404-page.scss
+++ b/src/scss/404-page.scss
@@ -1,51 +1,35 @@
 // Error 404 Page
-.error404
-{
-  margin-top: 0px !important;
-}
-
 .error404 > body
 {
   background-color: $primary-colour;
 }
 
-.error404 > body > main > .content-main
+.main
 {
+  height: 100%;
+  padding: 0;
+  margin: 0;
   display: flex;
-  position: absolute;
-  margin: auto;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  top:35%;
-  width:50%;
-  height: auto;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-.error404 > body > main > .content-main > .content
+.error404 .colContainer
 {
-  margin-left: 30px;
+  max-width: 50%;
 }
 
-.error404 > body > main > .content-main > svg
+.error404 .leftSlide
 {
-  margin-top: 30px;
+  margin-top: 20px;
+  margin-right: 30px;
 }
 
-.error404 > body > main > .content-main > .content > h1
+.error404 .rightText
 {
-  color: white !important;
-}
-.error404 > body > main > .content-main > .content > h2
-{
-  margin-top: -20px;
-  margin-bottom: 5px;
-  color: white !important;
-}
-
-.error404 > body > main > .content-main > .content > a
-{
-  margin-top: -10px;
-  color: white !important;
+  color: white;
+  text-decoration: none;
+  margin-top: 10px;
+  margin-bottom: 0px;
 }
