--- a/src/scss/index-page.scss
+++ b/src/scss/index-page.scss
@@ -23,9 +23,10 @@
   margin-left: 25px;
 }
 
-.card-image
+.index .card-image
 {
   overflow: hidden;
+  margin-bottom: -60px;
 }
 
 .postThumbnailImage
