Remove space between post content and comment area

--- a/src/scss/comment.scss
+++ b/src/scss/comment.scss
@@ -6,7 +6,7 @@ input:not([type]):focus:not([readonly]), input[type=date]:focus:not([readonly]),
 
 .comment-area
 {
-  padding-top: 20px;  
+  margin-top: -10px;  
 }
 
 .comment-meta
