Fix Colour of search box when update materialize to the new version

--- a/src/scss/search-box.scss
+++ b/src/scss/search-box.scss
@@ -27,7 +27,13 @@
   box-shadow: 0 1px 0 0 $home-background-colour;
 }
 
-.searchbox-outer .input-field .prefix.active
+.searchbox-outer .input-field .active
+{
+  color: $text-disabled-colour;
+}
+
+.searchbox-outer .input-field input
 {
      color: $text-heading-colour;
+     border-bottom: none;
 }
