Add Color changing effect when hover the contact link

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -41,3 +41,13 @@ main
       margin-bottom: 0px !important;
     }
 }
+
+.footer-contact-list
+{
+  color: white !important;
+}
+
+.footer-contact-list:hover
+{
+  color: lighten($primary-colour, $contact-btn-hover-lighter) !important;
+}
