Change Contant Buttons Alignment to use flex instead

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -19,13 +19,24 @@ main
 
 .footer-contact-list
 {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
   margin-bottom: 0px !important;
 }
 
-.footer-contact-list > li
+.footer-contact-list > div:first-child
+{
+  margin-left: 0;
+  flex: 0;
+}
+
+.footer-contact-list > div
 {
   margin-left: 20px;
-  display: inline-block;
+  flex: 0;
 }
 
 .footer-contact-list > li:first
