Add Colour Variable for contact buttons in the footer

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -16,3 +16,4 @@ $font-family-stack: 'Open Sans';
 // Social Button Hover Settings
 $social-btn-hover-darken: 20%;
 $chip-hover-darken: 10%;
+$contact-btn-hover-lighter: 20%;
