--- a/src/scss/topbar.scss
+++ b/src/scss/topbar.scss
@@ -1,36 +1,72 @@
-.topbar-left
+nav
 {
-  float: left;
-  margin-left: 20px;
+  padding-left: 20px;
+  padding-right: 40px;
+  position: fixed;
+  z-index: 2;
+  background-color: $primary-colour !important;
+  display: flex;
+  flex-direction: row;
+  animation: fadein 0.2s;
 }
 
-.topbar-right
+main
 {
-  float: right;
-  margin-right: 40px;
+  margin-top: 70px;
+}
 
+nav > .left
+{
+  flex: 1 0 0;
+  max-width: 50%;
+  float: left;
+}
+
+nav > .centre
+{
+  display: flex;
+  flex: 1 0 0;
+  max-width: 50%;
+  justify-content: center;
+}
+
+nav > .right
+{
+  flex: 1 0 0;
+  max-width: 50%;
+  display: flex;
+  justify-content: flex-end;
   @media only screen and (max-width : 992px) {
     display:none;
   }
 }
 
+.site-logo
+{
+  justify-self: center;
+  text-align: center;
+  font-family: $font-family-stack;
+  font-weight: 300;
+  font-size: 2.1rem;
+  color: white;
+}
+
 .search-box-wrapper
 {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   flex-wrap: nowrap;
 
   .top-search-icon
   {
     flex:0;
-    order:2;
     color: white;
     font-size: 20px;
+    margin-top: 20px;
   }
   .top-search-input
   {
     flex:0;
-    order:1;
     display: none;
     margin-left: 10px !important;
     border-bottom: none !important;
