--- a/src/scss/font.scss
+++ b/src/scss/font.scss
@@ -18,8 +18,15 @@ blockquote
 {
   border-left: 5px solid $primary-colour;
   font-family: $font-family-stack;
-  color: $text-disabled-colour;
-  font-size: 18px;
+}
+
+blockquote > p
+{
+  margin: 0;
+  font-size: 25px;
+  font-family: $font-family-stack;
+  font-weight: 300;
+  color: $text-secondary-colour;
 }
 
 strong
