--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,6 +2,7 @@
 $primary-colour: #2096F3;
 $text-heading-colour: #212121;
 $text-disabled-colour: #424242;
+$text-secondary-colour: #666666;
 $home-background-colour: #F1F4F9;
 $menubar-text-colour: #78909C;
 
