Apply new design of category page

--- a/src/scss/search-result.scss
+++ b/src/scss/search-result.scss
@@ -9,6 +9,12 @@
   color: $menubar-text-colour !important;
 }
 
+.search-result > .tax-header
+{
+  font-size: 50px;
+  font-weight: 300;
+}
+
 .search-result > .category-description
 {
   margin-top:-20px;
