Reengineer The List Page Card

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,6 +5,7 @@
 @import "variables";
 @import "animation";
 @import "font";
+@import "shadow-box";
 @import "topbar";
 @import "side-nav";
 @import "search-box";
