--- a/src/scss/shadow-box.scss
+++ b/src/scss/shadow-box.scss
@@ -49,15 +49,23 @@
   flex-direction: column;
   padding: 0 30px 30px 30px;
   flex: 0;
+  margin-top: -25px;
 }
 
 .shadow-box > .content-wrapper-no-thumbnail
 {
-  margin-top: -60px;
+  margin-top: -50px;
 }
 
 .content-wrapper > .title
 {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.content-wrapper > .title > a
+{
+  @extend h3;
   flex: 0;
   margin: 0;
   padding: 0;
@@ -66,6 +74,12 @@
 .content-wrapper > .subtitle
 {
   margin-top: 5px;
+  color: $text-disabled-colour;
+}
+
+.content-wrapper > .subtitle > a
+{
+  color: $text-disabled-colour;
 }
 
 .content-wrapper > .excerpt
@@ -78,4 +92,5 @@
 {
   margin: 0;
   padding: 0;
+  color: $text-disabled-colour;
 }
