--- a/src/scss/reader.scss
+++ b/src/scss/reader.scss
@@ -1,3 +1,45 @@
+.single-parallax-container
+{
+  margin-top:-6px;
+}
+
+.single-parallax-container > .parallax > .overlay
+{
+  position:absolute;
+  top:0;
+  left:0;
+  min-width:100%;
+  min-height:100%;
+  background-color:rgba(0,0,0,0.25);
+}
+
+.single-parallax-container > .parallax > .content
+{
+  position:relative;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 300px 0 0 0;
+}
+
+.single-parallax-container > .parallax > .content > .title
+{
+  color:white;
+  margin: 0;
+  font-size: 44.78px;
+}
+
+.single-parallax-container > .parallax > .content > .subtitle
+{
+  color:white;
+  margin: 0;
+}
+
+.single-parallax-container > .parallax > .content > .subtitle > a
+{
+  color:white;
+}
+
 .subtitle
 {
   font-weight: 300;
