Fix when title is too long and no thumbnail

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import "pagination";
 @import "reader";
 @import "comment";
+@import "front-page";
 @import "index-page";
 @import "single-page";
 @import "page-page";
