--- a/src/scss/front-page.scss
+++ b/src/scss/front-page.scss
@@ -1,3 +1,8 @@
+.home
+{
+  background-color: rgb(250,250,250);
+}
+
 .home-container > .page-section-wrapper
 {
   display: flex;
@@ -14,9 +19,17 @@
   padding: 0;
 }
 
-.page-section-wrapper > .category-description
+.page-section-wrapper > .section-info >  .category-description
 {
+  font-size: 44.78px;
   margin-top: 0;
+}
+
+.page-section-wrapper > .section-info > .see-more-button
+{
+  @extend h4;
+  margin: -50px 0 0 0;
+  float: right;
 }
 
 .section-wrapper > .section-item
@@ -58,4 +71,68 @@
 .section-wrapper > .section-item > .shadow-box
 {
   margin: 0 0 20px 0;
+}
+
+.more-cat-section
+{
+  margin-top: 60px;
+  margin-bottom: 30px;
+}
+
+.more-cat-section > h1
+{
+  font-size: 44.78px;
+  margin: 0;
+}
+
+.more-cat-section > .more-cat-wrapper
+{
+  display: flex;
+  flex-direction: row;
+  margin: 20px 30px 0 30px;
+}
+
+.more-cat-section > .more-cat-wrapper
+{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: stretch;
+  margin: 0 30px 0 30px;
+}
+
+.more-cat-wrapper > .more-cat-item
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex:0;
+  flex-basis: 200px;
+  margin-top: 30px;
+  height:200px;
+  width:200px;
+  border: 2px solid rgba(0,0,0,0.10);
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  hyphens: auto;
+}
+
+.more-cat-wrapper > .more-cat-item:hover
+{
+  background-color: $primary-colour;
+  font-weight: 300;
+  border: none;
+  transition:all 0.2s ease-in;
+
+  a
+  {
+    color:white;
+  }
+}
+
+.more-cat-wrapper > .more-cat-item > a
+{
+  @extend h1;
+  margin: 10px 10px 10px 10px;
 }
