--- a/src/scss/reader.scss
+++ b/src/scss/reader.scss
@@ -50,6 +50,14 @@
   color:white;
 }
 
+.single-container-img > img
+{
+  @media (max-width: 992px)
+  {
+    margin-top:-14px !important;
+  }
+}
+
 .subtitle
 {
   font-weight: 300;
